--- a/index.html
+++ b/index.html
@@ -18,11 +18,38 @@
                     <span class="title-first__secondary">незабываемое приключение ждет вас</span>
                 </h1>
                 <a href="#" class="btn btn_animated">наш католог</a>
-
             </div>
         </header>
-    </div>
 
+        <main>
+            <section class="section-about">
+                <div class="text-align-center margin-bottom-80px">
+                    <h2 class="title-second">НЕВЕРОЯТНОЕ ОЩУЩЕНИЕ СВОБОДЫ</h2>
+                </div>
+
+                <div class="row">
+                    <div class="col-1-of-2">
+                        <h3 class="title-third margin-bottom-10px">ПОЗВОЛЬТЕ СЕБЕ ПРИКЛЮЧЕНИЕ</h3>
+                        <p class="paragraph margin-bottom-30px">Задача организации, в особенности же дальнейшее развитие различных форм деятельности влечет за собой процесс внедрениям и модернизации соответствующий условий активизации. Таким образом начало повседневной работы по формированию позиции влечет.</p>
+
+                        <h3 class="title-third margin-bottom-10px">ВВЕРХ НА 6000 МЕТРОВ НАД УРОВНЕМ МОРЯ</h3>
+                        <p class="paragraph margin-bottom-50px">Задача организации, в особенности же дальнейшее развитие различных форм деятельности влечет за собой процесс внедрениям и модернизации соответствующий условий активизации. Таким образом начало повседневной работы по формированию позиции влечет.</p>
+
+                        <a href="#" class="btn-text">Узнать больше &rarr;</a>
+
+                    </div>
+                    <div class="col-1-of-2">
+                        Изображение
+                    </div>
+                </div>
+
+            </section>
+        </main>
+
+
+
+
+    </div>
 
 </body>
 </html>
