--- a/index.html
+++ b/index.html
@@ -36,11 +36,89 @@
                         <p class="paragraph margin-bottom-50px">Задача организации, в особенности же дальнейшее развитие различных форм деятельности влечет за собой процесс внедрениям и модернизации соответствующий условий активизации. Таким образом начало повседневной работы по формированию позиции влечет.</p>
 
                         <a href="#" class="btn-text">Узнать больше &rarr;</a>
+                    </div>
 
-                    </div>
+
                     <div class="col-1-of-2">
-                        Изображение
+                        <div class="composition">
+                            <img src="img/photo-ballons-1.png" alt="Photo-ballons-1" class="composition__photo composition__photo_n1">
+                            <img src="img/photo-ballons-2.png" alt="Photo-ballons-2" class="composition__photo composition__photo_n2">
+                            <img src="img/photo-ballons-3.png" alt="Photo-ballons-3" class="composition__photo composition__photo_n3">
+
+                        </div>
                     </div>
+                </div>
+            </section>
+
+            <section class="section-adventure">
+                <div class="row">
+                    <div class="col-1-of-4">
+                        <div class="adventure-card">
+                            <img class="adventure-card__icon icon-Vector-3 margin-bottom-30px" src="icons/Vector-3.svg" alt="">
+                            <h3 class="title-third margin-bottom-10px">ПРИКЛЮЧЕНИЯ</h3>
+                            <p class="paragraph">Задача организации, в особенности же дальнейшее развитие различных в особенности же развитие различных</p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="adventure-card">
+                            <img class="adventure-card__icon icon-Vector-2 margin-bottom-30px" src="icons/Vector-2.svg" alt="">
+                            <h3 class="title-third margin-bottom-10px">ПРИКЛЮЧЕНИЯ</h3>
+                            <p class="paragraph">Задача организации, в особенности же дальнейшее развитие различных в особенности же развитие различных</p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="adventure-card">
+                            <img class="adventure-card__icon icon-Vector- margin-bottom-30px" src="icons/Vector.svg" alt="">
+                            <h3 class="title-third margin-bottom-10px">ПРИКЛЮЧЕНИЯ</h3>
+                            <p class="paragraph">Задача организации, в особенности же дальнейшее развитие различных в особенности же развитие различных</p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="adventure-card">
+                            <img class="adventure-card__icon icon-Vector-1 margin-bottom-30px" src="icons/Vector-1.svg" alt="">
+                            <h3 class="title-third margin-bottom-10px">ПРИКЛЮЧЕНИЯ</h3>
+                            <p class="paragraph">Задача организации, в особенности же дальнейшее развитие различных в особенности же развитие различных</p>
+                        </div>
+                    </div>
+                </div>   
+            </section>
+            <section class="section-tour">
+                <div class="text-align-center margin-bottom-80px">
+                    <h2 class="title-second">НАИБОЛЕЕ ПОПУЛЯРНЫЕ ТУРЫ</h2>
+                </div>
+
+                <div class="col-1-of-3">
+                    <div class="card-tour">
+                        <div class="card-tour__side card-tour__side_front">
+                            <div class="card-tour__img margin-bottom-80px"></div>
+                            <h4 class="card-tour__title">
+                                <span class="card-tour__span card-tour__span_1">ГРУПОВЫЕ</span>
+                                <br>
+                                <span class="card-tour__span card-tour__span_2">ТУРЫ</span>
+                            </h4>
+                            <div class="card-tour__descr">
+                                <ul>
+                                    <li>Группы от 6 человек</li>
+                                    <li>Продолжительность 2 час</li>
+                                    <li>В группе 1 гид</li>
+                                    <li>Дальность полета 6км</li>
+                                    <li>Бесплатные сувениры</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card-tour__side card-tour__side_back">BACK</div>
+                    </div>
+                </div>
+
+                <div class="col-1-of-3">
+                    col-1-of-3
+                </div>
+
+                <div class="col-1-of-3">
+                    col-1-of-3
                 </div>
 
             </section>
