--- a/index.html
+++ b/index.html
@@ -89,41 +89,156 @@
                 <div class="text-align-center margin-bottom-80px">
                     <h2 class="title-second">НАИБОЛЕЕ ПОПУЛЯРНЫЕ ТУРЫ</h2>
                 </div>
+                <div class="row">
+                    <div class="col-1-of-3">
+                        <div class="card-tour">
+                            <div class="card-tour__side card-tour__side_front">
+                                <div class="card-tour__img card-tour__img_1 margin-bottom-80px"></div>
+                                <h4 class="card-tour__title">
+                                    <span class="card-tour__span card-tour__span_1">ГРУПОВЫЕ</span>
+                                    <br>
+                                    <span class="card-tour__span card-tour__span_2">ТУРЫ</span>
+                                </h4>
+                                <div class="card-tour__descr">
+                                    <ul>
+                                        <li>Группы от 6 человек</li>
+                                        <li>Продолжительность 2 час</li>
+                                        <li>В группе 1 гид</li>
+                                        <li>Дальность полета 6км</li>
+                                        <li>Бесплатные сувениры</li>
+                                    </ul>
+                                </div>
+                            </div>
 
-                <div class="col-1-of-3">
-                    <div class="card-tour">
-                        <div class="card-tour__side card-tour__side_front">
-                            <div class="card-tour__img margin-bottom-80px"></div>
-                            <h4 class="card-tour__title">
-                                <span class="card-tour__span card-tour__span_1">ГРУПОВЫЕ</span>
-                                <br>
-                                <span class="card-tour__span card-tour__span_2">ТУРЫ</span>
-                            </h4>
-                            <div class="card-tour__descr">
-                                <ul>
-                                    <li>Группы от 6 человек</li>
-                                    <li>Продолжительность 2 час</li>
-                                    <li>В группе 1 гид</li>
-                                    <li>Дальность полета 6км</li>
-                                    <li>Бесплатные сувениры</li>
-                                </ul>
+                            <div class="card-tour__side card-tour__side_back">
+                                <div class="card-tour__backSide-box">
+                                    <p class="card-tour__text_1">Полная стоимость:</p>
+                                    <p class="card-tour__text_2">5990₽</p>
+                                    <a href="#" class="btn btn_animated">ЗАБРОНИРОВАТЬ</a>
+                                </div>
                             </div>
                         </div>
-                        <div class="card-tour__side card-tour__side_back">BACK</div>
+                    </div>
+
+                    <div class="col-1-of-3">
+                        <div class="card-tour">
+                            <div class="card-tour__side card-tour__side_front">
+                                <div class="card-tour__img card-tour__img_2 margin-bottom-80px"></div>
+                                <h4 class="card-tour__title">
+                                    <span class="card-tour__span card-tour__span_1">Частные</span>
+                                    <br>
+                                    <span class="card-tour__span card-tour__span_2">Туры</span>
+                                </h4>
+                                <div class="card-tour__descr">
+                                    <ul>
+                                        <li>Группы от 6 человек</li>
+                                        <li>Продолжительность 2 час</li>
+                                        <li>В группе 1 гид</li>
+                                        <li>Дальность полета 6км</li>
+                                        <li>Бесплатные сувениры</li>
+                                    </ul>
+                                </div>
+                            </div>
+
+                            <div class="card-tour__side card-tour__side_back">
+                                <div class="card-tour__backSide-box">
+                                    <p class="card-tour__text_1">Полная стоимость:</p>
+                                    <p class="card-tour__text_2">5990₽</p>
+                                    <a href="#" class="btn btn_animated">ЗАБРОНИРОВАТЬ</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-3">
+                        <div class="card-tour">
+                            <div class="card-tour__side card-tour__side_front">
+                                <div class="card-tour__img card-tour__img_3 margin-bottom-80px"></div>
+                                <h4 class="card-tour__title">
+                                    <span class="card-tour__span card-tour__span_1">Смотровые</span>
+                                    <br>
+                                    <span class="card-tour__span card-tour__span_2">площадки</span>
+                                </h4>
+                                <div class="card-tour__descr">
+                                    <ul>
+                                        <li>Группы от 6 человек</li>
+                                        <li>Продолжительность 2 час</li>
+                                        <li>В группе 1 гид</li>
+                                        <li>Дальность полета 6км</li>
+                                        <li>Бесплатные сувениры</li>
+                                    </ul>
+                                </div>
+                            </div>
+
+                            <div class="card-tour__side card-tour__side_back">
+                                <div class="card-tour__backSide-box">
+                                    <p class="card-tour__text_1">Полная стоимость:</p>
+                                    <p class="card-tour__text_2">5990₽</p>
+                                    <a href="#" class="btn btn_animated">ЗАБРОНИРОВАТЬ</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="text-align-center">
+                    <a href="#" class="btn btn_animated">ЗАБРОНИРОВАТЬ</a>
+                </div>
+            </section>
+
+            <section class="section-feedback">
+                <div class="bg-gradient"></div>
+                <video class="bg-video" autoplay muted loop>
+                    <source src="img/ballons-1.mp4">
+                    <source src="img/ballons-2.webm">
+                </video>
+                
+                <div class="text-align-center margin-bottom-80px">
+                    <h2 class="title-second title-second_white">ОТЗЫВЫ НАШИХ КЛИЕНТОВ</h2>
+                </div>
+
+                <div class="row">
+                    <div class="feedback-card">
+                        <figure class="feedback-card__img">
+                            <img src="img/feedback-1.jpg" alt="person">
+                            <figcaption class="feedback-card__name">Антон 
+                                Рябин</figcaption>
+                        </figure>
+                        <div class="feedback-card__box">
+                            <h3 class="title-third margin-bottom-10px">Я получил массу впечатлений</h3>
+                            <p class="paragraph margin-bottom-30px">Задача организации, в особенности же дальнейшее
+                            развитие различных форм деятельности влечет за
+                            собой процесс внедрениям и модернизации 
+                            соответствующий условий активизации. Таким
+                            образом начало повседневной работы по 
+                            формированию позиции влечет.</p>
+                        </div>
                     </div>
                 </div>
 
-                <div class="col-1-of-3">
-                    col-1-of-3
+                <div class="row">
+                    <div class="feedback-card">
+                        <figure class="feedback-card__img">
+                            <img src="img/feedback-2.jpg" alt="person">
+                            <figcaption class="feedback-card__name">Лиза 
+                                Фролова</figcaption>
+                        </figure>
+                        <div class="feedback-card__box">
+                            <h3 class="title-third margin-bottom-10px">ЭТО БЫЛО ВЕЛИКОЛЕПНО И НЕЗАБЫВАЕМО</h3>
+                            <p class="paragraph margin-bottom-30px">Задача организации, в особенности же дальнейшее
+                            развитие различных форм деятельности влечет за
+                            собой процесс внедрениям и модернизации 
+                            соответствующий условий активизации. Таким
+                            образом начало повседневной работы по 
+                            формированию позиции влечет.</p>
+                        </div>
+                    </div>
                 </div>
 
-                <div class="col-1-of-3">
-                    col-1-of-3
+                <div class="text-align-center">
+                    <a href="#" class="btn btn_animated">ЗАБРОНИРОВАТЬ</a>
                 </div>
-
             </section>
         </main>
-
 
 
 
